service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: derper
  namespace: derper

spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP

  selector:
    app: derper
