ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer

  name: derper
  namespace: derper

spec:
  ingressClassName: nginx

  rules:
    - host: derper.xy-ai.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: derper
                port:
                  number: 443

  tls:
    - hosts:
        - derper.xy-ai.com
      secretName: ingress-tls
